(0.3) fix drag n drop flicker

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: Arial;
+}
+
 ul {
 	margin: 0;
 }
